[gd_scene load_steps=12 format=3 uid="uid://5fj6ajo3nloc"]

[ext_resource type="Script" uid="uid://d1an14n7kxskt" path="res://final_boss.gd" id="1_0otar"]
[ext_resource type="Texture2D" uid="uid://l20rftyvlfv4" path="res://Rocky Roads/Enemies/jefe-final2.png" id="2_ifitu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ifitu"]
atlas = ExtResource("2_ifitu")
region = Rect2(0, 0, 340, 701)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibcdr"]
atlas = ExtResource("2_ifitu")
region = Rect2(340, 0, 340, 701)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dprq"]
atlas = ExtResource("2_ifitu")
region = Rect2(0, 0, 340, 701)

[sub_resource type="AtlasTexture" id="AtlasTexture_0otar"]
atlas = ExtResource("2_ifitu")
region = Rect2(0, 0, 340, 701)

[sub_resource type="AtlasTexture" id="AtlasTexture_il0sp"]
atlas = ExtResource("2_ifitu")
region = Rect2(340, 0, 340, 701)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0uwk"]
atlas = ExtResource("2_ifitu")
region = Rect2(0, 0, 340, 701)

[sub_resource type="SpriteFrames" id="SpriteFrames_rxsrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifitu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibcdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dprq")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0otar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il0sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0uwk")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75bcn"]
size = Vector2(52.4228, 62.967)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr8hm"]
size = Vector2(58, 62.25)

[node name="FinalBoss" type="CharacterBody2D"]
light_mask = 31
visibility_layer = 575
z_index = 2
collision_layer = 31
collision_mask = 31
script = ExtResource("1_0otar")

[node name="BossAnimated" type="AnimatedSprite2D" parent="."]
light_mask = 15
visibility_layer = 15
scale = Vector2(0.223529, 0.195135)
sprite_frames = SubResource("SpriteFrames_rxsrt")
animation = &"Walk"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 3)
scale = Vector2(1.01101, 0.984642)
shape = SubResource("RectangleShape2D_75bcn")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 2.125)
shape = SubResource("RectangleShape2D_tr8hm")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-36, -6)
scale = Vector2(0.7, 0.7)
target_position = Vector2(0, 64.2857)
collision_mask = 4

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2(-38, 30)
rotation = 1.5708
target_position = Vector2(4.19617e-05, 12)
collision_mask = 4

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
